<resources>
    <string name="app_name">JubiFarm</string>
    <string name="enteremail">Enter email Id </string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="enterpsswrd">Enter Password </string>
    <string name="login">Login</string>
    <string name="createnewaccount">CREATE NEW ACCOUNT </string>
    <string name="title_activity_crop_planning">CropPlanning</string>
    <string name="Welcome_to_JUBIFARM">Welcome to JUBIFARM</string>
    <string name="Mobile_No_Email">Mobile No. / Email</string>
    <string name="select_picture">Select Picture</string>
    <string name="PleaseselectFarmer">Please select farmer</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="profile_photo_msg">Click on Icon for profile photo</string>
    <string name="try_again">Try Again</string>
    <string name="otp_verify">OTP Verify</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="exit">Exit!</string>
    <string name="really_exit">Do you really want to exit application?</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="select_bloodgroup">Select Blood Group</string>
    <string name="select_block">Select Block</string>
    <string name="select_village">Select Village</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="EducationArray">
        <item>Select Education</item>
        <item>illiterate</item>
        <item>Primary</item>
        <item>Upto 8th</item>
        <item>Matriculation(10th)</item>
        <item>Secondary(12th)</item>
        <item>Graduation</item>
        <item>PG and above</item>
    </string-array>
    <string-array name="MonthelyIncome">
        <item>Select Monthly</item>
        <item>50K</item>
        <item>50K - 1 Lakh</item>
        <item>1 - 2 Lakh</item>
        <item>2 - 3 Lakh</item>
        <item>3 - 4 Lakh</item>
        <item>4 - 5 Lakh</item>
        <item>5 - 6 Lakh</item>
        <item>6 - 7 Lakh</item>
        <item>7 - 8 Lakh</item>
        <item>8 - 9 Lakh</item>
        <item>9 - 10 Lakh</item>
        <item>10 - Above</item>
    </string-array>
    <string-array name="Occuption">
        <item>Select Occupation</item>
        <item>Farmer</item>
        <item>Doctor</item>
        <item>Engineer</item>
        <item>Business Man </item>
        <item>Student</item>
        <item>Other</item>
    </string-array>
    <string name="Season">Season</string>
    <string name="Crop"> Crop </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_vendors">Total Vendors :</string>
    <string name="vendor">Vendor</string>
    <string name="Vendor_Name">Vendor Name</string>
    <string name="no_data_found">No data found!</string>
    <string name="please_chekc_network">Please check you network connection.</string>
    <string name="check_all">Check all</string>
    <string name="age_age">Age</string>
    <string name="DateofBirth">Date of Birth</string>
    <string name="expected_price_per_unit">Expected Price per Unit</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="view_vendor_list">View Vendor List</string>
    <string name="select_crop">SELECT CROP</string>
    <string name="select_plant">Select Plant</string>
    <string name="accept_by_vendor">Accept by Vendor</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="Eng">English</string>
    <string name="Hindi">हिन्दी</string>
    <string name="Gugrati">गुजराती</string>
    <string name="kannada">कन्नड़</string>
    <string name="hone_screen">Main Menu</string>
    <string name="Farmer_detals">Farmer details</string>
    <string name="farmer_reg">Farmer Registration</string>
    <string name="crop_planning">Crop Planning</string>
    <string name="crop_monetring">Crop Monitoring</string>
    <string name="input_ording">Input Ordering</string>
    <string name="crop_sale">Crop Sale</string>
    <string name="land_holding">Land Holding</string>
    <string name="help_line">Helpline</string>
    <string name="synchronize">Synchronize</string>
    <string name="knowledge_tranning">Knowledge &amp; Training</string>
    <string name="Change_Farmer">Change Farmer</string>
    <string name="Remove">Remove</string>
    <string name="total">Total </string>
    <string name="Total_">Total :</string>
    <string name="are_you_sure_to_want_to_exit_application">Are you sure to want to exit application?</string>
    <string name="Crop_Name">Crop Name </string>
    <string name="Total_Number_Of_Plant">Total Number Of Plant</string>
    <string name="Add_Plant">Add Plant</string>
    <string name="visit_plant">Visit Plant</string>
    <string name="Please_take_image_of_plant">Please take image of plant</string>
    <string name="Please_select_sub_crop">Please select sub crop</string>
    <string name="Please_select_crop">Please select crop</string>
    <string name="Please_take_another_image">Please take another image</string>
    <string name="ImageCropper1">ImageCropper needs Storage access in order to store your profile picture.</string>
    <string name="ImageCropper2">ImageCropper needs Camera access in order to take profile picture.</string>
    <string name="ImageCropper3">ImageCropper needs Camera and Storage access in order to take profile picture.</string>
    <string name="Select_Picture">Select Picture</string>
    <string name="Please_select_another_image">Please select another image</string>
    <string name="profile_picture">Please select different profile picture.</string>
    <string name="Training_Name">Training Name </string>
    <string name="Training_Name_">Training Name :</string>
    <string name="Training_Date">Training Date </string>
    <string name="Training_Date_">Training Date :</string>
    <string name="Location">Location</string>
    <string name="Trainer_Name">Trainer Name</string>
    <string name="Trainer_Destination">Trainer Designation</string>
    <string name="Password">Password</string>
    <string name="Crop_Category">Crop Category </string>
    <string name="Sub_Crop_Category">Sub Crop Category</string>
    <string name="Land">Land</string>
    <string name="Geo_Cordinates">Geo Coordinates</string>
    <string name="Price">Price</string>
    <string name="Submit">Submit</string>
    <string name="TAKE_PICTURE_OF_CROP">Take Picture of Crop</string>
    <string name="CROP_LIST"> 03 Crop List</string>
    <string name="SUB_CROP_LIST">SUB CROP LIST</string>
    <string name="Select_Crop_Category">Select Crop Category</string>
    <string name="Select_Subcategory">Select Subcategory</string>
    <string name="Select_Land">Select Land</string>
    <string name="Search">Search</string>
    <string name="Search_">Search...</string>
    <string name="No_data_available_for_current_search">No data available for current search</string>
    <string name="Plant_ID">Plant ID</string>
    <string name="Plant_Name">Plant Name</string>
    <string name="Farmer_Name">Farmer Name</string>
    <string name="Land_ID">Land ID</string>
    <string name="Geo_Coordinates">Geo Coordinates</string>
    <string name="VIEW_PLANT">VIEW PLANT</string>
    <string name="Not_Available">Not Available</string>
    <string name="Sub_Plantation">Sub Plantation</string>
    <string name="Post_Plantation">Post Plantation </string>
    <string name="View_Plant_Growth">View Plant Growth</string>
    <string name="UPLOAD_IMAGE">UPLOAD IMAGE</string>
    <string name="Crop_Monitoring">Crop Monitoring</string>
    <string name="Sub_Monitoring_List">Sub Monitoring List</string>
    <string name="Production_Details">Production Details</string>
    <string name="Sale_Details">Sale Details</string>
    <string name="LAND_HOLDING">LAND HOLDING</string>
    <string name="select">select</string>
    <string name="Land_Area">Land Area</string>
    <string name="View_Land">View Land</string>
    <string name="Edit_Land">Edit Land</string>
    <string name="land_details">Land Details</string>
    <string name="Total_Plant">Total Plant</string>
    <string name="Total">Total </string>
    <string name="View_In_Map">View In Map</string>
    <string name="Please_enter_land_quantity">Please enter land quantity</string>
    <string name="Please_select_unit">Please select unit</string>
    <string name="Please_take_image_of_land">Please take image of land</string>
    <string name="Farmer_Selection">Farmer Selection</string>
    <string name="ADD_LAND">ADD LAND</string>
    <string name="Land_Name">Land Name</string>
    <string name="Land_Soil_Info">Land Soil Info</string>
    <string name="Select_Soil_Chemical_Characteristics">Select Soil Chemical Characteristics</string>
    <string name="Select_Soil_Characteristics">Select Soil Characteristics</string>
    <string name="Filtration_rate">Filtration rate</string>
    <string name="Soil_Texture">Soil Texture</string>
    <string name="pH">pH</string>
    <string name="Bulk_Density">Bulk Density</string>
    <string name="Cation_exchange_capacity">Cation exchange capacity</string>
    <string name="EC">EC (electricity conductivity)</string>
    <string name="P">P</string>
    <string name="S">S</string>
    <string name="Mg">Mg</string>
    <string name="K">K</string>
    <string name="N">N</string>
    <string name="Ca">Ca</string>
    <string name="Land_Selection">Land Selection</string>
    <string name="View_Plant">View Plant</string>
    <string name="SYNC_DATA">SYNC DATA</string>
    <string name="Sync_Databtn">Sync Data</string>
    <string name="Pending">Pending</string>
    <string name="Farmer_Registration">Farmer Registration</string>
    <string name="Crop_Sale">Crop Sale</string>
    <string name="services">Services</string>
    <string name="INPUT_ORDERING_LIST">INPUT ORDERING LIST</string>
    <string name="Years">Years</string>
    <string name="Input_Type">Input Type</string>
    <string name="Request_Raised_by_Farmer">Request Raised by Farmer</string>
    <string name="add_input_ordering">Add More Input Ordering click on plus icon.</string>
    <string name="Select_Date">Select Date</string>
    <string name="To_Date">To Date</string>
    <string name="From_Date">From Date</string>
    <string name="Select_Item">Select Item</string>
    <string name="Quantity">Quantity</string>
    <string name="Select_Unit">Select Unit</string>
    <string name="Status">Status</string>
    <string name="Items">Items</string>
    <string name="Item">Item</string>
    <string name="Date">Date</string>
    <string name="referred_to_vendor">Referred to Vendor</string>
    <string name="Cancel">Cancel</string>
    <string name="Please_wait">Please wait...</string>
    <string name="HELPLINE">HELPLINE</string>
    <string name="Farmer">Farmer</string>
    <string name="select_farmer">Select Farmer</string>
    <string name="quantity">Quantity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_input_type">Select Input Type</string>
    <string name="select_land">Select Land</string>
    <string name="change_language">Change Language</string>
    <string name="Actvity_Plant">Actvity/Plant</string>
    <string name="choose_language">Choose Language</string>
    <string name="change_password">Change Password</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="about_us">About Us</string>
    <string name="my_account">My Account</string>
    <string name="sync_data">Sync Data</string>
    <string name="logout">Logout</string>
</resources>