<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/account"
        android:icon="@drawable/ic_account"
        android:visible="false"
        android:title="@string/my_account"/>

    <item android:id="@+id/changePassword"
        android:icon="@drawable/ic_password"
        android:title="@string/change_password"/>

    <item android:id="@+id/changelanguage"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/change_language"/>

    <item android:id="@+id/sync_data"
        android:visible="false"
        android:icon="@drawable/ic_baseline_update_24"
        android:title="@string/sync_data"/>

    <item android:id="@+id/about_us"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/about_us"/>

    <item android:id="@+id/disclaimer"
        android:icon="@drawable/ic_disclaimer"
        android:title="@string/disclaimer_title"/>

    <item android:id="@+id/logout"
        android:icon="@drawable/ic_power"
        android:title="@string/logout"/>

</menu>