<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_dialog_background"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin15"
        android:paddingBottom="@dimen/margin15"
        >

        <TextView
            android:id="@+id/tv_change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_18"
            android:includeFontPadding="true"
            android:padding="@dimen/margin5"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin5"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5"
            android:layout_gravity="center"
            android:layout_below="@+id/tv_change_language"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/rb_eng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Eng"
                    android:padding="15dp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_hindi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Hindi"
                    android:padding="15dp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/btn_gugrati"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Gugrati"
                    android:padding="15dp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/btn_canad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kannada"
                    android:padding="15dp"
                    android:textColor="@color/black" />

            </RadioGroup>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>