<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#DADCDD"
        android:padding="@dimen/_10dp"
        android:layout_margin="@dimen/_3dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#DADCDD"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/ll_farmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/Farmer"
                android:textSize="@dimen/text_15"
                android:textColor="@android:color/black" />
            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spn_farmer"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:hint="@string/select_farmer"
                android:textSize="@dimen/text_14"
                android:layout_margin="@dimen/_5dp"
                android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_input_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/Input_Type"
                android:textSize="@dimen/text_15"
                android:textColor="@android:color/black" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spn_input_type"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:hint="@string/select_input_type"
                android:textSize="@dimen/text_14"
                android:layout_margin="@dimen/_5dp"
                android:layout_height="match_parent"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="@dimen/_30dp"
                android:gravity="center"
                android:textColor="#ffffff"
                android:background="@drawable/btnround"
                android:visibility="invisible"
                android:text="@string/Cancel">

            </TextView>
            <TextView
                android:id="@+id/tv_search"
                android:layout_width="0dip"
                android:layout_weight="0.4"
                android:layout_height="@dimen/_30dp"
                android:gravity="center"
                android:textColor="#ffffff"
                android:background="@drawable/btnround"
                android:text="@string/Search">

            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>