<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_dialog_background"
    android:layout_margin="@dimen/margin10"
    android:orientation="vertical"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_25dp"
        android:paddingBottom="@dimen/_25dp"
        android:paddingStart="@dimen/margin5"
        android:paddingEnd="@dimen/margin5"
        >

        <EditText
            android:id="@+id/et_excepted_price_per_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expected_price_per_unit"
            android:textSize="@dimen/margin16"
            android:inputType="numberDecimal"
            android:layout_marginTop="@dimen/_5dp"
            />

        <EditText
            android:id="@+id/et_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:textSize="@dimen/margin16"
            android:inputType="numberDecimal"
            android:layout_below="@+id/et_excepted_price_per_unit"
            android:layout_marginTop="@dimen/_5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_below="@+id/et_quantity"
            >
        <Button
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/_5dp"
            android:paddingRight="@dimen/_5dp"
            android:background="@drawable/btn_submit_background"
            android:layout_weight="1"
            />
            <Button
                android:id="@+id/btn_reject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reject"
                android:textColor="@color/white"
                android:paddingLeft="@dimen/_5dp"
                android:paddingRight="@dimen/_5dp"
                android:layout_marginStart="@dimen/margin5"
                android:background="@drawable/btn_cancel_shape"
                android:layout_weight="1"
                />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>