<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">


            <TextView
                android:id="@+id/tv_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:fontFamily="@font/itcavantagradestdbk"
                android:padding="4dp"
                android:text="@string/Actvity_Plant"
                android:textColor="#000"
                android:textSize="15sp" />


            <RadioGroup
                android:id="@+id/rg_Plant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/rb_Yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:scaleX=".7"
                    android:scaleY=".7"
                    android:text="@string/yes"
                    android:textSize="@dimen/_15dp" />

                <RadioButton
                    android:id="@+id/rb_No"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:scaleX=".7"
                    android:scaleY=".7"
                    android:text="@string/no"
                    android:textSize="@dimen/_15dp" />
            </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>